--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ body,html {
 #middle {
     width:100%;
     height:80vh;
-    background:linear-gradient(0deg,rgba(0,0,0,1),rgba(0,0,0,0)),url("https://images.unsplash.com/photo-1494587351196-bbf5f29cff42?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&&w=1351&q=80") center center fixed;
+    background:linear-gradient(0deg,rgba(0,0,0,1),rgba(0,0,0,0)),url("https://sun9-55.userapi.com/WKg3TpwEphn56P9Y85Sbrh0AorIcYkGCNsMygg/CwjQbaMnP9s.jpg") center center fixed;
     background-size:100% auto;
     background-repeat:no-repeat;
     color:white;
